All: Removed obsolete TODO autoconverted comments.

--- a/examples/adhoc/ieee80211/omnetpp.ini
+++ b/examples/adhoc/ieee80211/omnetpp.ini
@@ -16,7 +16,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # mobility
-**.host*.mobility.typename = "MassMobility" #TODO autoconverted
+**.host*.mobility.typename = "MassMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
 **.host*.mobility.changeAngleBy = normal(0deg, 30deg)
