--- a/examples/diffserv/onedomain/omnetpp.ini
+++ b/examples/diffserv/onedomain/omnetpp.ini
@@ -66,7 +66,7 @@ debug-statistics-recording = true
 **.edgeDatarate = 500kbps
 **.coreDatarate = 500kbps
 
-**.R?.eth[*].ingressTC.typename = "TC1" #TODO autoconverted
+**.R?.eth[*].ingressTC.typename = "TC1"
 **.ingressTC.numClasses = 4
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='default']")
 **.ingressTC.marker.dscps = "AF11 AF21 AF31 AF41 BE"
@@ -141,7 +141,7 @@ extends = Apps, Exp1
 **.H8.app[0].typename = "UdpSink"
 **.H8.app[0].localPort = 1000
 
-**.R?.eth[*].ingressTC.typename = "TC1" #TODO autoconverted
+**.R?.eth[*].ingressTC.typename = "TC1"
 **.ingressTC.numClasses = 4
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='default']")
 
@@ -174,7 +174,7 @@ extends = Exp2, Apps
 
 [Config Exp24]
 extends = Exp2, Apps
-**.R?.eth[*].ingressTC.typename = ""#TODO autoconverted
+**.R?.eth[*].ingressTC.typename = ""
 **.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 100
 
@@ -214,7 +214,7 @@ repeat = 3
 [Config Exp31]
 extends = Exp3, Apps
 
-**.R?.eth[*].ingressTC.typename = "TC2" #TODO autoconverted
+**.R?.eth[*].ingressTC.typename = "TC2"
 **.ingressTC.meter.cir = "150kbps"
 **.ingressTC.meter.cbs = 30000B
 **.ingressTC.marker.dscps = "AF11 AF12"
@@ -229,7 +229,7 @@ extends = Exp3, Apps
 [Config Exp32]
 extends = Exp3, Apps
 
-**.R?.eth[*].ingressTC.typename = "TC3" #TODO autoconverted
+**.R?.eth[*].ingressTC.typename = "TC3"
 **.ingressTC.meter.cir = "150kbps"
 **.ingressTC.meter.cbs = 30000B
 
@@ -263,7 +263,7 @@ repeat = 3
 [Config Exp51]
 extends = Exp5, Apps
 
-**.R?.eth[*].ingressTC.typename = "TC1" #TODO autoconverted
+**.R?.eth[*].ingressTC.typename = "TC1"
 **.ingressTC.numClasses = 3
 **.ingressTC.classifier.filters = xmldoc("filters.xml", "//experiment[@id='5.1']")
 **.ingressTC.marker.dscps = "EF AF11 AF21 BE" # BE is for Arp
@@ -275,6 +275,6 @@ extends = Exp5, Apps
 [Config Exp52]
 extends = Exp5, Apps
 
-**.R?.ppp[*].egressTC.typename = ""#TODO autoconverted
+**.R?.ppp[*].egressTC.typename = ""
 **.R?.ppp[*].queue.typename = "DropTailQueue"
 **.R?.ppp[*].queue.frameCapacity = 200
