--- a/examples/diffserv/simple_/omnetpp.ini
+++ b/examples/diffserv/simple_/omnetpp.ini
@@ -56,7 +56,7 @@ description = "Diffserv traffic conditioning and queueing is turn off"
 
 [Config WithPolicing]
 description = "Diffserv traffic conditioning is turned on in the ppp[0] interface of the router"
-**.router.ppp[0].egressTC.typename = "TrafficConditioner" #TODO autoconverted
+**.router.ppp[0].egressTC.typename = "TrafficConditioner"
 **.efMeter.cir = "70%"
 **.efMeter.cbs = 50KiB
 **.defaultMeter.cir = "30%"
