--- a/examples/geometry/omnetpp.ini
+++ b/examples/geometry/omnetpp.ini
@@ -17,12 +17,12 @@ seed-set = 3
 **.constraintAreaMaxY = 1000m
 **.constraintAreaMaxZ = 100m
 
-**.obstacleLoss.typename = "DielectricObstacleLoss" #TODO autoconverted
-**.objectCache.typename = ""#TODO autoconverted
+**.obstacleLoss.typename = "DielectricObstacleLoss"
+**.objectCache.typename = ""
 
 # mobility
 **.host*.mobility.initFromDisplayString = false
-**.host*.mobility.typename = "MassMobility" #TODO autoconverted
+**.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
 **.host*.mobility.changeAngleBy = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
