--- a/examples/inet/configurator/complex.ini
+++ b/examples/inet/configurator/complex.ini
@@ -3,7 +3,7 @@ network = ComplexConfiguratorNetwork
 tkenv-plugin-path = ../../../etc/plugins
 
 # mobility
-*.*.mobility.typename = "StationaryMobility" #TODO autoconverted
+*.*.mobility.typename = "StationaryMobility"
 **.initialZ = 0m
 
 # routing
