--- a/examples/inet/configurator/simple.ini
+++ b/examples/inet/configurator/simple.ini
@@ -2,7 +2,7 @@
 network = SimpleConfiguratorNetwork
 tkenv-plugin-path = ../../../etc/plugins
 
-**.arp.typename = "GlobalArp" #TODO autoconverted
+**.arp.typename = "GlobalArp"
 
 # routing
 **.forwarding = true
