--- a/examples/inet/routerperf/omnetpp.ini
+++ b/examples/inet/routerperf/omnetpp.ini
@@ -7,8 +7,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.nodeNo = 3
 
 # app config
-**.sender[*].trafGen.typename = "IpvxTrafGen" #TODO autoconverted
-**.recip[*].trafGen.typename = "IpvxTrafSink" #TODO autoconverted
+**.sender[*].trafGen.typename = "IpvxTrafGen"
+**.recip[*].trafGen.typename = "IpvxTrafSink"
 
 **.sender[*].trafGen.startTime = 0s
 **.sender[*].trafGen.sendInterval = 0.1ms
