--- a/examples/inet/shutdownrestart/omnetpp.ini
+++ b/examples/inet/shutdownrestart/omnetpp.ini
@@ -91,10 +91,10 @@ extends = TCP_common
 
 [Config TcpNsc]
 extends = TCP_common
-**.srv*.tcp.typename = "TcpNsc" #TODO autoconverted
-**.cli*.tcp.typename = "TcpNsc" #TODO autoconverted
+**.srv*.tcp.typename = "TcpNsc"
+**.cli*.tcp.typename = "TcpNsc"
 
 [Config TcpLwip]
 extends = TCP_common
-**.srv*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.cli*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.srv*.tcp.typename = "TcpLwip"
+**.cli*.tcp.typename = "TcpLwip"
