--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -9,26 +9,26 @@ description = ""
 
 [Config with_EtherMAC_externalQueue_fullduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac" #TODO autoconverted
+**.eth[*].mac.typename = "EtherMac"
 **.eth[*].queue.typename = "EtherQosQueue"
 **.eth[*].queue.dataQueue.typename = "DropTailQueue"
 
 
 [Config with_EtherMAC_internalQueue_fullduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac" #TODO autoconverted
+**.eth[*].mac.typename = "EtherMac"
 **.eth[*].queue.typename = ""
 
 [Config with_EtherMAC_externalQueue_halfduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac" #TODO autoconverted
+**.eth[*].mac.typename = "EtherMac"
 **.eth[*].mac.duplexMode = false
 **.eth[*].queue.typename = "EtherQosQueue"
 **.eth[*].queue.dataQueue.typename = "DropTailQueue"
 
 [Config with_EtherMAC_internalQueue_halfduplex]
 description = ""
-**.eth[*].mac.typename = "EtherMac" #TODO autoconverted
+**.eth[*].mac.typename = "EtherMac"
 **.eth[*].mac.duplexMode = false
 **.eth[*].queue.typename = ""
 
