--- a/examples/inet/tcpclientserver/omnetpp.ini
+++ b/examples/inet/tcpclientserver/omnetpp.ini
@@ -4,71 +4,71 @@ description = "default_TCP <---> default_TCP"
 [Config inet__inet]
 description = "inet_TCP <---> inet_TCP"
 # default TCP implementation
-**.tcp.typename = "Tcp" #TODO autoconverted
+**.tcp.typename = "Tcp"
 
 [Config inet__inet_msg]
 description = "inet_TCP <---> inet_TCP"
 # default TCP implementation
-**.tcp.typename = "Tcp" #TODO autoconverted
+**.tcp.typename = "Tcp"
 **.app[*].dataTransferMode = "object" # bytecount | object | bytestream
 
 [Config inet__inet_stream]
 description = "inet_TCP <---> inet_TCP"
 # default TCP implementation
-**.tcp.typename = "Tcp" #TODO autoconverted
+**.tcp.typename = "Tcp"
 **.app[*].dataTransferMode = "bytestream" # bytecount | object | bytestream
 
 [Config NSClinux__NSClinux]
 description = "NSC_TCP (Linux) <---> NSC_TCP (Linux)"
 # setting TCP stack implementation
-**.tcp.typename = "TcpNsc" #TODO autoconverted
+**.tcp.typename = "TcpNsc"
 
 [Config NSClinux__NSClinux_stream]
 description = "NSC_TCP (Linux) <---> NSC_TCP (Linux)"
 # setting TCP stack implementation
-**.tcp.typename = "TcpNsc" #TODO autoconverted
+**.tcp.typename = "TcpNsc"
 **.app[*].dataTransferMode = "bytestream" # bytecount | object | bytestream
 
 [Config NSClinux__NSCfreebsd]
 description = "NSC_TCP (Linux) <---> NSC_TCP (FreeBSD)"
 # setting TCP stack implementation
-**.tcp.typename = "TcpNsc" #TODO autoconverted
+**.tcp.typename = "TcpNsc"
 **.client*.tcp.stackName = "libfreebsd5.3.so"
 
 [Config NSCfreebsd__NSCfreebsd]
 description = "NSC_TCP (FreeBSD) <---> NSC_TCP (FreeBSD)"
 # setting TCP stack implementation
-**.tcp.typename = "TcpNsc" #TODO autoconverted
+**.tcp.typename = "TcpNsc"
 **.tcp.stackName = "libfreebsd5.3.so"
 
 [Config NSClwip__inet]
 description = "NSC_TCP (lwIP) <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "TcpNsc" #TODO autoconverted
+**.server*.tcp.typename = "TcpNsc"
 **.server*.tcp.stackName = "liblwip.so"
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.client*.tcp.typename = "Tcp"
 
 [Config inet__NSClinux]
 description = "inet_TCP <---> NSC_TCP (linux)"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "TcpNsc" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "TcpNsc"
 
 [Config lwip__lwip]
 description = "TcpLwip <---> TcpLwip"
 # setting TCP stack implementation
-**.tcp.typename = "TcpLwip" #TODO autoconverted
+**.tcp.typename = "TcpLwip"
 
 [Config lwip__inet]
 description = "TcpLwip <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "TcpLwip"
+**.client*.tcp.typename = "Tcp"
 
 [Config lwip__lwip__msg]
 description = "TcpLwip <---> TcpLwip"
 # setting TCP stack implementation
-**.tcp.typename = "TcpLwip" #TODO autoconverted
+**.tcp.typename = "TcpLwip"
 #**.tcp.sendQueueClass = "TcpLwipMsgBasedSendQueue"
 #**.tcp.receiveQueueClass = "TcpLwipMsgBasedReceiveQueue"
 **.app[*].dataTransferMode = "object" # bytecount | object | bytestream
@@ -76,7 +76,7 @@ description = "TcpLwip <---> TcpLwip"
 [Config lwip__lwip__stream]
 description = "TcpLwip <---> TcpLwip"
 # setting TCP stack implementation
-**.tcp.typename = "TcpLwip" #TODO autoconverted
+**.tcp.typename = "TcpLwip"
 #**.tcp.sendQueueClass = "TcpLwipMsgBasedSendQueue"
 #**.tcp.receiveQueueClass = "TcpLwipMsgBasedReceiveQueue"
 **.app[*].dataTransferMode = "bytestream" # bytecount | object | bytestream
@@ -84,53 +84,53 @@ description = "TcpLwip <---> TcpLwip"
 [Config inet__lwip]
 description = "inet_TCP <---> TcpLwip"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "TcpLwip"
 
 [Config inet-reno]
 description = "TCP <---> TCP with reno algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "TcpReno"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
 [Config inet-newreno]
 description = "TCP <---> TCP with NewReno algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "TcpNewReno"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
 [Config inet-tahoe]
 description = "TCP <---> TCP with Tahoe algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "TcpReno"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
 [Config inet-vegas]
 description = "TCP <---> TCP with Vegas algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "TcpVegas"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
 [Config inet-westwood]
 description = "TCP <---> TCP with Westwood algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "TcpWestwood"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
 
 [Config inet-dumb]
 description = "inet_TCP <---> inet_TCP with DumbTcp algorithm"
-*.server*.tcp.typename = "Tcp" #TODO autoconverted
-*.client*.tcp.typename = "Tcp" #TODO autoconverted
+*.server*.tcp.typename = "Tcp"
+*.client*.tcp.typename = "Tcp"
 **.tcp.tcpAlgorithmClass = "DumbTcp"
 *.per = 0.01 * ${0, 0.1, 0.2, 0.5, 1, 2, 5}
 *.server*.app[0].echoFactor = 0
