--- a/examples/manetrouting/gpsr/omnetpp.ini
+++ b/examples/manetrouting/gpsr/omnetpp.ini
@@ -30,7 +30,7 @@ num-rngs = 3
 [Config Random]
 network = GPSRNetworkRandom
 
-**.host[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host[*].mobility.typename = "StationaryMobility"
 
 # ping app
 *.host[*].numApps = 1
@@ -50,7 +50,7 @@ description = base config for Ipv6
 
 [Config _Generic]
 description = base config for generic network
-**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer"
 **.gpsr.networkProtocolModule = "^.generic.nextHop"
 **.gpsr.routingTableModule = "^.generic.routingTable"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
@@ -76,7 +76,7 @@ description = network layer for multiple network protocols
 **.hasIpv4 = true
 **.hasIpv6 = true
 **.hasGn = true
-**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer"
 
 [Config MultiIPv4]
 extends = Random, _Multi, _IPv4
@@ -90,7 +90,7 @@ extends = Random, _Multi, _Generic
 [Config Manual]
 network = GPSRNetworkManual
 
-**.host*.mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host*.mobility.typename = "StationaryMobility"
 
 # ping app
 *.host*.numApps = 1
