--- a/examples/sctp/cmttest/omnetpp.ini
+++ b/examples/sctp/cmttest/omnetpp.ini
@@ -73,7 +73,7 @@ network = multihomed
 **.sctp.addIP = false
 **.sctp.addTime = 0s
 **.sctp.addAddress = ""
-**.sctp.addIp.typename = "0" #TODO autoconverted
+**.sctp.addIp.typename = "0"
 **.sctp.chunks = ""
 **.sctp.packetDrop = false
 **.sctp.RTXMethod=0  # Always after 3 Sacks
