--- a/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
@@ -83,7 +83,7 @@ cmdenv-express-mode = true
 **.namid = -1  # auto
 
 # Ethernet switch
-**.switch*.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.switch*.relayUnit.typename = "MacRelayUnit"
 **.relayUnit.addressTableSize = 100
 **.relayUnit.agingTime = 120s
 **.relayUnit.bufferSize = 1048576B  # 1Mb
