--- a/examples/wireless/crosstalk/omnetpp.ini
+++ b/examples/wireless/crosstalk/omnetpp.ini
@@ -13,7 +13,7 @@ seed-set = 1
 **.constraintAreaMaxZ = 0m
 
 # mobility
-*.*Node[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+*.*Node[*].mobility.typename = "StationaryMobility"
 *.*Node[*].mobility.initFromDisplayString = false
 
 # udp App
@@ -29,7 +29,7 @@ seed-set = 1
 *.bNode[*].app[0].destAddresses = "bNode[0]"
 
 # nic
-*.*Node[*].wlan[*].radio.typename = "Ieee80211DimensionalRadio" #TODO autoconverted
+*.*Node[*].wlan[*].radio.typename = "Ieee80211DimensionalRadio"
 
 # medium
 *.radioMedium.backgroundNoise.dimensions = "time frequency"
