--- a/examples/wireless/layered80211/omnetpp.ini
+++ b/examples/wireless/layered80211/omnetpp.ini
@@ -22,10 +22,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxY = 400m
 **.constraintAreaMaxZ = 0m
 
-**.arp.typename = "GlobalArp" #TODO autoconverted
+**.arp.typename = "GlobalArp"
 
 # mobility
-**.host*.mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host*.mobility.typename = "StationaryMobility"
 **.host*.mobility.initFromDisplayString = false
 **.host[0].mobility.initialX = 10m
 **.host[0].mobility.initialY = 20m
@@ -50,7 +50,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].radio.receiver.snirThreshold = 4dB
 
 **.wlan[*].typename = "Ieee80211Interface"
-**.wlan[*].radio.typename = "Ieee80211OfdmRadio" #TODO autoconverted
+**.wlan[*].radio.typename = "Ieee80211OfdmRadio"
 **.wlan[*].radio.carrierFrequency = 2.4GHz
 **.wlan[*].radio.receiver.energyDetection = -90dBm
 **.wlan[*].radio.receiver.channelSpacing = 20MHz
@@ -70,9 +70,9 @@ description = "host1 pinging host0"
 *.numHosts = 2
 **.levelOfDetail = "symbol"
 **.isCompliant = true
-**.wlan[*].radio.transmitter.typename = "Ieee80211LayeredOfdmTransmitter" #TODO autoconverted
-**.wlan[*].radio.receiver.errorModel.typename = "Ieee80211OfdmErrorModel" #TODO autoconverted
-**.wlan[*].radio.receiver.typename = "Ieee80211LayeredOfdmReceiver" #TODO autoconverted
+**.wlan[*].radio.transmitter.typename = "Ieee80211LayeredOfdmTransmitter"
+**.wlan[*].radio.receiver.errorModel.typename = "Ieee80211OfdmErrorModel"
+**.wlan[*].radio.receiver.typename = "Ieee80211LayeredOfdmReceiver"
 
 [Config LayeredNonCompliant80211Ping]
 description = "host1 pinging host0"
@@ -81,18 +81,18 @@ description = "host1 pinging host0"
 
 ## Transmitter
 **.isCompliant = false
-**.wlan[*].radio.transmitter.typename = "Ieee80211LayeredOfdmTransmitter" #TODO autoconverted
+**.wlan[*].radio.transmitter.typename = "Ieee80211LayeredOfdmTransmitter"
 **.wlan[*].radio.transmitter.channelSpacing = 20MHz
-**.wlan[*].radio.transmitter.signalEncoder.typename = "Ieee80211OfdmEncoder" #TODO autoconverted
-**.wlan[*].radio.transmitter.signalModulator.typename = "Ieee80211OfdmModulator" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataEncoder.typename = "Ieee80211OfdmEncoder" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataModulator.typename = "Ieee80211OfdmModulator" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataEncoder.fecEncoder.typename = "ConvolutionalCoder" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataEncoder.scrambler.typename = "AdditiveScrambler" #TODO autoconverted
-**.wlan[*].radio.transmitter.dataEncoder.interleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
-**.wlan[*].radio.transmitter.signalEncoder.fecEncoder.typename = "ConvolutionalCoder" #TODO autoconverted
-**.wlan[*].radio.transmitter.signalEncoder.scrambler.typename = ""#TODO autoconverted
-**.wlan[*].radio.transmitter.signalEncoder.interleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
+**.wlan[*].radio.transmitter.signalEncoder.typename = "Ieee80211OfdmEncoder"
+**.wlan[*].radio.transmitter.signalModulator.typename = "Ieee80211OfdmModulator"
+**.wlan[*].radio.transmitter.dataEncoder.typename = "Ieee80211OfdmEncoder"
+**.wlan[*].radio.transmitter.dataModulator.typename = "Ieee80211OfdmModulator"
+**.wlan[*].radio.transmitter.dataEncoder.fecEncoder.typename = "ConvolutionalCoder"
+**.wlan[*].radio.transmitter.dataEncoder.scrambler.typename = "AdditiveScrambler"
+**.wlan[*].radio.transmitter.dataEncoder.interleaver.typename = "Ieee80211OfdmInterleaver"
+**.wlan[*].radio.transmitter.signalEncoder.fecEncoder.typename = "ConvolutionalCoder"
+**.wlan[*].radio.transmitter.signalEncoder.scrambler.typename = ""
+**.wlan[*].radio.transmitter.signalEncoder.interleaver.typename = "Ieee80211OfdmInterleaver"
 
 **.wlan[*].radio.transmitter.dataModulator.pilotSubcarrierPolarityVectorOffset = 0
 **.wlan[*].radio.transmitter.signalModulator.pilotSubcarrierPolarityVectorOffset = 0
@@ -130,18 +130,18 @@ description = "host1 pinging host0"
 **.wlan[*].radio.transmitter.dataModulator.subcarrierPolarityVectorOffset = 1
 
 ## Receiver
-**.wlan[*].radio.receiver.typename = "Ieee80211LayeredOfdmReceiver" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDecoder.typename = "Ieee80211OfdmDecoder" #TODO autoconverted
-**.wlan[*].radio.receiver.errorModel.typename = "Ieee80211OfdmErrorModel" #TODO autoconverted
-**.wlan[*].radio.receiver.signalDecoder.typename = "Ieee80211OfdmDecoder" #TODO autoconverted
-**.wlan[*].radio.receiver.signalDemodulator.typename = "Ieee80211OfdmDemodulator" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDemodulator.typename = "Ieee80211OfdmDemodulator" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDecoder.fecDecoder.typename = "ConvolutionalCoder" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDecoder.descrambler.typename = "AdditiveScrambler" #TODO autoconverted
-**.wlan[*].radio.receiver.dataDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
-**.wlan[*].radio.receiver.signalDecoder.fecDecoder.typename = "ConvolutionalCoder" #TODO autoconverted
-**.wlan[*].radio.receiver.signalDecoder.descrambler.typename = ""#TODO autoconverted
-**.wlan[*].radio.receiver.signalDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver" #TODO autoconverted
+**.wlan[*].radio.receiver.typename = "Ieee80211LayeredOfdmReceiver"
+**.wlan[*].radio.receiver.dataDecoder.typename = "Ieee80211OfdmDecoder"
+**.wlan[*].radio.receiver.errorModel.typename = "Ieee80211OfdmErrorModel"
+**.wlan[*].radio.receiver.signalDecoder.typename = "Ieee80211OfdmDecoder"
+**.wlan[*].radio.receiver.signalDemodulator.typename = "Ieee80211OfdmDemodulator"
+**.wlan[*].radio.receiver.dataDemodulator.typename = "Ieee80211OfdmDemodulator"
+**.wlan[*].radio.receiver.dataDecoder.fecDecoder.typename = "ConvolutionalCoder"
+**.wlan[*].radio.receiver.dataDecoder.descrambler.typename = "AdditiveScrambler"
+**.wlan[*].radio.receiver.dataDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver"
+**.wlan[*].radio.receiver.signalDecoder.fecDecoder.typename = "ConvolutionalCoder"
+**.wlan[*].radio.receiver.signalDecoder.descrambler.typename = ""
+**.wlan[*].radio.receiver.signalDecoder.deinterleaver.typename = "Ieee80211OfdmInterleaver"
 
 # Data deinterleaver
 **.wlan[*].radio.receiver.dataDecoder.deinterleaver.numberOfCodedBitsPerSubcarrier = 4
@@ -178,7 +178,7 @@ description = "host1 pinging host0"
 #constraint = (($spacing == 5 && $headerBitrate == 1.5) || ($spacing == 10 && $headerBitrate == 3) || ($spacing == 20 && $headerBitrate == 6)) && (($dataBitrate == 12 && ($spacing == 20 || $spacing == 10 || $spacing == 5)) || ($dataBitrate == 24 && ($spacing == 20 || $spacing == 10)) || ($dataBitrate == 36 && $spacing == 20) || ($dataBitrate == 54 && $spacing == 20))
 #
 ## Mobility
-#**.host*.mobility.typename = "StationaryMobility" #TODO autoconverted
+#**.host*.mobility.typename = "StationaryMobility"
 #**.host*.mobility.initFromDisplayString = false
 #**.host[0].mobility.initialX = 100m
 #**.host[0].mobility.initialY = 200m
