--- a/examples/wireless/mactest/omnetpp.ini
+++ b/examples/wireless/mactest/omnetpp.ini
@@ -23,7 +23,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mobility.initialZ = 0m
 
 **.opMode = "g(mixed)"
-**.arp.typename = "GlobalArp" #TODO autoconverted
+**.arp.typename = "GlobalArp"
 **.mtu = 10000B
 
 # access point
@@ -37,7 +37,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 
 [Config MacBase]
-**.wlan[*].mac.typename = "Ieee80211Mac" #TODO autoconverted
+**.wlan[*].mac.typename = "Ieee80211Mac"
 
 [Config MacEdca]
 extends = MacBase
@@ -65,7 +65,7 @@ extends = MacBase
 **.srvHost.udpApp[0].localPort = 21
 **.srvHost.udpApp[1].localPort = 5000
 
-**.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
+**.wlan[*].classifier.typename = "ExampleQosClassifier"
 
 **.wlan[*].mac.qosStation = true
 
