--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -12,7 +12,7 @@ network = TestNic
 *.numHosts = 2
 
 # mobility
-*.host[*].mobility.typename = "MassMobility" #TODO autoconverted
+*.host[*].mobility.typename = "MassMobility"
 *.host[*].mobility.constraintAreaMinX = 0m
 *.host[*].mobility.constraintAreaMinY = 0m
 *.host[*].mobility.constraintAreaMinZ = 0m
@@ -49,7 +49,7 @@ network = TestNic
 
 [Config AbstractCSMA]
 *.host[*].wlan[*].typename = "WirelessInterface"
-*.host[*].wlan[*].mac.typename = "Ieee802154Mac" #TODO autoconverted
+*.host[*].wlan[*].mac.typename = "Ieee802154Mac"
 *.host[*].wlan[*].mac.useMACAcks = false
 *.host[*].wlan[*].mac.rxSetupTime = 0s
 
@@ -64,8 +64,8 @@ network = TestNic
 *.host[*].wlan[*].agent.typename = ""
 
 [Config AbstractUnitDiskRadio]
-*.radioMedium.typename = "UnitDiskRadioMedium" #TODO autoconverted
-*.host[*].wlan[*].radio.typename = "UnitDiskRadio" #TODO autoconverted
+*.radioMedium.typename = "UnitDiskRadioMedium"
+*.host[*].wlan[*].radio.typename = "UnitDiskRadio"
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.host[*].wlan[*].radio.transmitter.preambleDuration = 0s
 *.host[*].wlan[*].radio.transmitter.headerLength = 100b
@@ -75,9 +75,9 @@ network = TestNic
 *.host[*].wlan[*].radio.receiver.ignoreInterference = true
 
 [Config AbstractApskScalarRadio]
-*.radioMedium.typename = "ApskScalarRadioMedium" #TODO autoconverted
+*.radioMedium.typename = "ApskScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
-*.host[*].wlan[*].radio.typename = "ApskScalarRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "ApskScalarRadio"
 *.host[*].wlan[*].radio.carrierFrequency = 2.412GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
 *.host[*].wlan[*].radio.transmitter.power = 2mW
@@ -90,9 +90,9 @@ network = TestNic
 *.host[*].wlan[*].radio.receiver.snirThreshold = 4dB
 
 [Config AbstractApskDimensionalRadio]
-*.radioMedium.typename = "ApskDimensionalRadioMedium" #TODO autoconverted
+*.radioMedium.typename = "ApskDimensionalRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
-*.host[*].wlan[*].radio.typename = "ApskDimensionalRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "ApskDimensionalRadio"
 *.host[*].wlan[*].radio.carrierFrequency = 2.412GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
 *.host[*].wlan[*].radio.transmitter.power = 2mW
@@ -105,18 +105,18 @@ network = TestNic
 *.host[*].wlan[*].radio.receiver.snirThreshold = 4dB
 
 [Config AbstractIeee80211ScalarRadio]
-*.radioMedium.typename = "Ieee80211ScalarRadioMedium" #TODO autoconverted
+*.radioMedium.typename = "Ieee80211ScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
-*.host[*].wlan[*].radio.typename = "Ieee80211ScalarRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "Ieee80211ScalarRadio"
 *.host[*].wlan[*].radio.transmitter.power = 2mW
 *.host[*].wlan[*].radio.receiver.sensitivity = -85dBm
 *.host[*].wlan[*].radio.receiver.energyDetection = -85dBm
 *.host[*].wlan[*].radio.receiver.snirThreshold = 4dB
 
 [Config AbstractIeee80211DimensionalRadio]
-*.radioMedium.typename = "Ieee80211DimensionalRadioMedium" #TODO autoconverted
+*.radioMedium.typename = "Ieee80211DimensionalRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
-*.host[*].wlan[*].radio.typename = "Ieee80211DimensionalRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "Ieee80211DimensionalRadio"
 *.host[*].wlan[*].radio.transmitter.power = 2mW
 *.host[*].wlan[*].radio.receiver.sensitivity = -85dBm
 *.host[*].wlan[*].radio.receiver.energyDetection = -85dBm
@@ -211,7 +211,7 @@ description = "IEEE 80211 mac with unit disk radio"
 [Config Ieee80211MacWithIeee80211ScalarRadio]
 extends = AbstractIeee80211Mac, AbstractApskScalarRadio
 description = "IEEE 80211 mac with scalar radio"
-*.host[*].wlan[*].radio.typename = "Ieee80211ScalarRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "Ieee80211ScalarRadio"
 # nic settings
 **.wlan*.mac.*.rateSelection.dataFrameBitrate = 54Mbps
 **.wlan*.mac.*.rateSelection.multicastFrameBitrate = 2Mbps
