--- a/examples/wireless/obstacle/omnetpp.ini
+++ b/examples/wireless/obstacle/omnetpp.ini
@@ -24,7 +24,7 @@ num-rngs = 3
 *.physicalEnvironment.spaceMaxZ = 1000m
 
 # radio medium
-*.radioMedium.obstacleLoss.typename = "DielectricObstacleLoss" #TODO autoconverted
+*.radioMedium.obstacleLoss.typename = "DielectricObstacleLoss"
 
 # mobility
 *.host[*].mobility.initFromDisplayString = false
@@ -61,7 +61,7 @@ description = "Wireless nodes send pings while moving around the streets"
 *.host[*].wlan[*].radio.transmitter.power = 5mW
 
 # mobility
-*.host[*].mobility.typename = "RectangleMobility" #TODO autoconverted
+*.host[*].mobility.typename = "RectangleMobility"
 *.host[*].mobility.speed = uniform(10mps, 100mps)
 *.host[0].mobility.startPos = 0
 *.host[0].mobility.constraintAreaMinX = 50m
@@ -109,12 +109,12 @@ description = "Wireless nodes send pings inside a house"
 *.host[*].mobility.constraintAreaMaxX = 30m
 *.host[*].mobility.constraintAreaMaxY = 20m
 *.host[*].mobility.constraintAreaMaxZ = 1m
-*.host[0].mobility.typename = "StationaryMobility" #TODO autoconverted
+*.host[0].mobility.typename = "StationaryMobility"
 *.host[0].mobility.initialX = 30m
 *.host[0].mobility.initialY = 19m
 *.host[*].mobility.initialZ = 0m
 
-*.host[1].mobility.typename = "TurtleMobility" #TODO autoconverted
+*.host[1].mobility.typename = "TurtleMobility"
 *.host[1].mobility.updateInterval = 100ms
 *.host[1].mobility.turtleScript = xmldoc("turtle.xml")
 
@@ -142,7 +142,7 @@ description = "Wireless nodes send pings while orbiting around a sphere"
 *.host[*].wlan[*].radio.transmitter.power = 5mW
 
 # mobility
-*.host[*].mobility.typename = "CircleMobility" #TODO autoconverted
+*.host[*].mobility.typename = "CircleMobility"
 *.host[*].mobility.constraintAreaMinX = 0m
 *.host[*].mobility.constraintAreaMinY = 0m
 *.host[*].mobility.constraintAreaMinZ = 0m
