--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -63,19 +63,19 @@ tkenv-plugin-path = ../../../etc/plugins
 **.srvHost.app[3].localPort = 5000
 
 [Config MacNonQos]
-**.wlan[*].mac.typename = "Ieee80211Mac" #TODO autoconverted
+**.wlan[*].mac.typename = "Ieee80211Mac"
 **.mac.dcf.maxQueueSize = -1
 
 [Config MacQos]
 extends = MacNonQos
-**.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
+**.wlan[*].classifier.typename = "ExampleQosClassifier"
 **.mac.hcf.maxQueueSize = -1
 **.mac.qosStation = true
-**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "BasicMsduAggregationPolicy" #TODO autoconverted
+**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "BasicMsduAggregationPolicy"
 
 [Config MacQosWithoutAggregation]
 extends = MacQos
-**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = ""#TODO autoconverted
+**.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = ""
 
 [Config MacQosWithRtsCts]
 extends = MacQos
