--- a/examples/wireless/scaling/omnetpp.ini
+++ b/examples/wireless/scaling/omnetpp.ini
@@ -18,7 +18,7 @@ num-rngs = 3
 **.arp.globalARP = true
 
 # mobility
-*.host[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+*.host[*].mobility.typename = "StationaryMobility"
 *.host[*].mobility.constraintAreaMinX = 0m
 *.host[*].mobility.constraintAreaMinY = 0m
 *.host[*].mobility.constraintAreaMinZ = 0m
@@ -45,8 +45,8 @@ num-rngs = 3
 network = TestRadioScaling
 extends = AbstractAckingMac
 description = "Unit disk radio"
-*.radioMedium.typename = "UnitDiskRadioMedium" #TODO autoconverted
-*.host[*].wlan[*].radio.typename = "UnitDiskRadio" #TODO autoconverted
+*.radioMedium.typename = "UnitDiskRadioMedium"
+*.host[*].wlan[*].radio.typename = "UnitDiskRadio"
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.host[*].wlan[*].radio.transmitter.communicationRange = 100m
 *.host[*].wlan[*].radio.transmitter.interferenceRange = 0m
@@ -57,27 +57,27 @@ description = "Unit disk radio"
 network = TestRadioScaling
 extends = AbstractAckingMac
 description = "Scalar radio"
-*.radioMedium.typename = "RadioMedium" #TODO autoconverted
+*.radioMedium.typename = "RadioMedium"
 *.radioMedium.mediumLimitCache.carrierFrequency = 2.4GHz
 *.radioMedium.mediumLimitCache.maxTransmissionPower = 1W
 *.radioMedium.mediumLimitCache.minInterferencePower = -110dBm
 *.radioMedium.mediumLimitCache.minReceptionPower = -85dBm
-*.radioMedium.propagation.typename = "ConstantSpeedPropagation" #TODO autoconverted
-*.radioMedium.pathLoss.typename = "FreeSpacePathLoss" #TODO autoconverted
-*.radioMedium.analogModel.typename = "ScalarAnalogModel" #TODO autoconverted
-*.radioMedium.backgroundNoise.typename = "IsotropicScalarBackgroundNoise" #TODO autoconverted
+*.radioMedium.propagation.typename = "ConstantSpeedPropagation"
+*.radioMedium.pathLoss.typename = "FreeSpacePathLoss"
+*.radioMedium.analogModel.typename = "ScalarAnalogModel"
+*.radioMedium.backgroundNoise.typename = "IsotropicScalarBackgroundNoise"
 *.radioMedium.backgroundNoise.power = -110dBm
 *.host[*].wlan[*].mac.fullDuplex = false
-*.host[*].wlan[*].radio.typename = "ApskRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "ApskRadio"
 *.host[*].wlan[*].radio.carrierFrequency = 2.4GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
-*.host[*].wlan[*].radio.transmitter.typename = "ApskScalarTransmitter" #TODO autoconverted
+*.host[*].wlan[*].radio.transmitter.typename = "ApskScalarTransmitter"
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.host[*].wlan[*].radio.transmitter.headerLength = 100b
 *.host[*].wlan[*].radio.transmitter.power = 1W
 *.host[*].wlan[*].radio.transmitter.preambleDuration = 0s
-*.host[*].wlan[*].radio.antenna.typename = "IsotropicAntenna" #TODO autoconverted
-*.host[*].wlan[*].radio.receiver.typename = "ApskScalarReceiver" #TODO autoconverted
+*.host[*].wlan[*].radio.antenna.typename = "IsotropicAntenna"
+*.host[*].wlan[*].radio.receiver.typename = "ApskScalarReceiver"
 *.host[*].wlan[*].radio.receiver.energyDetection = -85dBm
 *.host[*].wlan[*].radio.receiver.sensitivity = -85dBm
 *.host[*].wlan[*].radio.receiver.snirThreshold = 10dB
@@ -87,26 +87,26 @@ description = "Scalar radio"
 network = TestRadioScaling
 extends = AbstractAckingMac
 description = "Dimensional radio"
-*.radioMedium.typename = "ApskDimensionalRadioMedium" #TODO autoconverted
+*.radioMedium.typename = "ApskDimensionalRadioMedium"
 *.radioMedium.mediumLimitCache.carrierFrequency = 2.4GHz
 *.radioMedium.mediumLimitCache.maxTransmissionPower = 1W
 *.radioMedium.minInterferencePower = -110dBm
 *.radioMedium.minReceptionPower = -85dBm
-*.radioMedium.propagation.typename = "ConstantSpeedPropagation" #TODO autoconverted
-*.radioMedium.analogModel.typename = "DimensionalAnalogModel" #TODO autoconverted
-*.radioMedium.backgroundNoise.typename = "IsotropicDimensionalBackgroundNoise" #TODO autoconverted
+*.radioMedium.propagation.typename = "ConstantSpeedPropagation"
+*.radioMedium.analogModel.typename = "DimensionalAnalogModel"
+*.radioMedium.backgroundNoise.typename = "IsotropicDimensionalBackgroundNoise"
 *.radioMedium.backgroundNoise.power = -110dBm
 *.host[*].wlan[*].mac.fullDuplex = false
-*.host[*].wlan[*].radio.typename = "ApskRadio" #TODO autoconverted
+*.host[*].wlan[*].radio.typename = "ApskRadio"
 *.host[*].wlan[*].radio.carrierFrequency = 2.4GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
-*.host[*].wlan[*].radio.transmitter.typename = "ApskDimensionalTransmitter" #TODO autoconverted
+*.host[*].wlan[*].radio.transmitter.typename = "ApskDimensionalTransmitter"
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
 *.host[*].wlan[*].radio.transmitter.headerLength = 100b
 *.host[*].wlan[*].radio.transmitter.power = 1W
 *.host[*].wlan[*].radio.transmitter.preambleDuration = 0s
-*.host[*].wlan[*].radio.antenna.typename = "IsotropicAntenna" #TODO autoconverted
-*.host[*].wlan[*].radio.receiver.typename = "ApskDimensionalReceiver" #TODO autoconverted
+*.host[*].wlan[*].radio.antenna.typename = "IsotropicAntenna"
+*.host[*].wlan[*].radio.receiver.typename = "ApskDimensionalReceiver"
 *.host[*].wlan[*].radio.receiver.energyDetection = -85dBm
 *.host[*].wlan[*].radio.receiver.sensitivity = -85dBm
 *.host[*].wlan[*].radio.receiver.snirThreshold = 10dB
