--- a/examples/wireless/shortcut/omnetpp.ini
+++ b/examples/wireless/shortcut/omnetpp.ini
@@ -21,8 +21,8 @@ network = ShortcutRadioExample
 
 # nic parameters
 *.*.wlan[*].typename = "WirelessInterface"
-*.*.wlan[*].mac.typename = "AckingMac" #TODO autoconverted
-*.*.wlan[*].radio.typename = "ShortcutRadio" #TODO autoconverted
+*.*.wlan[*].mac.typename = "AckingMac"
+*.*.wlan[*].radio.typename = "ShortcutRadio"
 *.*.wlan[*].*.bitrate = 1Mbps
 *.*.wlan[*].radio.lengthOverhead = 1b
 *.*.wlan[*].radio.durationOverhead = 10us
