--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -42,5 +42,5 @@ Throughput.numCli = 3
 
 [Config Mac]
 extends = Throughput2
-**.wlan.mac.typename = "Ieee80211Mac" #TODO autoconverted
+**.wlan.mac.typename = "Ieee80211Mac"
 
