--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -5,7 +5,7 @@ tkenv-plugin-path = ../../../etc/plugins
 #record-eventlog = true
 sim-time-limit = 5s
 
-**.arp.typename = "GlobalArp" #TODO autoconverted
+**.arp.typename = "GlobalArp"
 
 **.constraintAreaMinX = 0m
 **.constraintAreaMinY = 0m
@@ -53,19 +53,19 @@ sim-time-limit = 5s
 **.srvHost.app[4].localPort = 99
 
 [Config MacNonQos]
-**.wlan[*].mac.typename = "Ieee80211Mac" #TODO autoconverted
+**.wlan[*].mac.typename = "Ieee80211Mac"
 **.mac.dcf.maxQueueSize = -1
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
 
 [Config MacQos]
 extends = MacNonQos
-**.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
+**.wlan[*].classifier.typename = "ExampleQosClassifier"
 **.mac.hcf.maxQueueSize = -1
 **.mac.qosStation = true
 
 [Config Fragmentation]
 **.wlan[*].mac.qosStation = true
-**.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
+**.wlan[*].classifier.typename = "ExampleQosClassifier"
 **.wlan[*].mac.hcf.originatorMacDataService.fragmentationPolicy.fragmentationThreshold = 500B
 **.wlan[*].mac.hcf.originatorMacDataService.msduAggregationPolicy.aggregationLengthThreshold = 10000
 
@@ -78,7 +78,7 @@ extends = MacNonQos
 
 [Config MsduAggregation]
 **.wlan[*].mac.qosStation = true
-**.wlan[*].classifier.typename = "ExampleQosClassifier" #TODO autoconverted
+**.wlan[*].classifier.typename = "ExampleQosClassifier"
 
 # cli
 **.cliHost.numApps = 1
