--- a/examples/aodv/omnetpp.ini
+++ b/examples/aodv/omnetpp.ini
@@ -11,7 +11,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].typename = "AckingWirelessInterface"
 **.wlan[*].bitrate = 2Mbps
 **.wlan[*].mac.headerLength = 20B
-**.wlan[*].radio.typename = "UnitDiskRadio" #TODO autoconverted
+**.wlan[*].radio.typename = "UnitDiskRadio"
 **.wlan[*].radio.transmitter.headerLength = 96b
 **.wlan[*].radio.transmitter.communicationRange = 250m
 **.wlan[*].radio.transmitter.interferenceRange = 0m
@@ -20,7 +20,7 @@ tkenv-plugin-path = ../../../etc/plugins
 *.numHosts = 20
 
 # mobility
-**.host[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host[*].mobility.typename = "StationaryMobility"
 **.mobility.constraintAreaMinZ = 0m
 **.mobility.constraintAreaMaxZ = 0m
 **.mobility.constraintAreaMinX = 0m
@@ -52,9 +52,9 @@ description = two fixed communicating nodes with low speed mobile nodes
 extends = Static
 # mobility
 **.aodv.activeRouteTimeout = 3s
-**.host[2..20].mobility.typename = "MassMobility" #TODO autoconverted
-**.host[0].mobility.typename = "StationaryMobility" #TODO autoconverted
-**.host[1].mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host[2..20].mobility.typename = "MassMobility"
+**.host[0].mobility.typename = "StationaryMobility"
+**.host[1].mobility.typename = "StationaryMobility"
 
 **.host[*].mobility.changeInterval = normal(5s, 0.1s)
 **.host[*].mobility.changeAngleBy = normal(0deg, 30deg)
