--- a/examples/ethernet/arptest/omnetpp.ini
+++ b/examples/ethernet/arptest/omnetpp.ini
@@ -41,7 +41,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.eth[*].queue.dataQueue.frameCapacity = 10
 
 # Ethernet switch
-**.switch*.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.switch*.relayUnit.typename = "MacRelayUnit"
 **.relayUnit.addressTableSize = 100
 **.relayUnit.agingTime = 120s
 **.relayUnit.bufferSize = 1MiB
