--- a/examples/ethernet/lans/duplexswitch.ini
+++ b/examples/ethernet/lans/duplexswitch.ini
@@ -10,4 +10,4 @@ network = SwitchedDuplexLAN
 **.cli.sendInterval = exponential(10ms)
 **.cli.reqLength = intuniform(50,1400)*1B
 **.cli.respLength = intWithUnit(truncnormal(3000B,3000B))
-**.switch*.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.switch*.relayUnit.typename = "MacRelayUnit"
