--- a/examples/ethernet/lans/largeNet.ini
+++ b/examples/ethernet/lans/largeNet.ini
@@ -42,4 +42,4 @@ LargeNet.server*.cli.destAddress = ""
 
 **.mac.duplexMode = true
 **.mac[*].duplexMode = true
-**.switch*.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.switch*.relayUnit.typename = "MacRelayUnit"
