--- a/examples/inet/bulktransfer/omnetpp.ini
+++ b/examples/inet/bulktransfer/omnetpp.ini
@@ -1,22 +1,22 @@
 [Config inet__inet]
 description = "inet_TCP <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "Tcp"
 
 [Config inet_inet_2a]
 description = "inet_TCP <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535
 **.tcp.mss = 1452
 
 [Config inet_inet_2b]
 description = "inet_TCP <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "Tcp"
 **.tcp.advertisedWindow = 65535
 **.tcp.mss = 1452
 **.tcp.sackSupport = true
@@ -26,37 +26,37 @@ description = "inet_TCP <---> inet_TCP"
 [Config lwip__lwip]
 description = "TcpLwip <---> TcpLwip"
 # setting TCP stack implementation
-**.server*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.client*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.server*.tcp.typename = "TcpLwip"
+**.client*.tcp.typename = "TcpLwip"
 
 [Config lwip__inet]
 description = "TcpLwip <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "TcpLwip"
+**.client*.tcp.typename = "Tcp"
 
 [Config inet__lwip]
 description = "inet_TCP <---> TcpLwip"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "TcpLwip"
 
 [Config nsc_nsc]
 description = "NSC_TCP <---> NSC_TCP"
 # setting TCP stack implementation
-**.tcp.typename = "TcpNsc" #TODO autoconverted
+**.tcp.typename = "TcpNsc"
 
 [Config nsc_inet]
 description = "NSC_TCP <---> inet_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "TcpNsc" #TODO autoconverted
-**.client*.tcp.typename = "Tcp" #TODO autoconverted
+**.server*.tcp.typename = "TcpNsc"
+**.client*.tcp.typename = "Tcp"
 
 [Config inet_nsc]
 description = "inet_TCP <---> NSC_TCP"
 # setting TCP stack implementation
-**.server*.tcp.typename = "Tcp" #TODO autoconverted
-**.client*.tcp.typename = "TcpNsc" #TODO autoconverted
+**.server*.tcp.typename = "Tcp"
+**.client*.tcp.typename = "TcpNsc"
 
 [General]
 network = BulkTransfer
