--- a/examples/inet/hierarchical99/networklayer.ini
+++ b/examples/inet/hierarchical99/networklayer.ini
@@ -12,12 +12,12 @@ network = Hierarchical99
 *.area11.lan1.host1.app[*].count = 1
 
 [Config IPv4]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = ""
 
 [Config IPv6]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = ""
 
@@ -26,15 +26,15 @@ network = Hierarchical99
 **.hasGn = false
 
 [Config Generic]
-**.networkConfigurator.typename = "NextHopNetworkConfigurator" #TODO autoconverted
-**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.networkConfigurator.typename = "NextHopNetworkConfigurator"
+**.generic.typename = "NextHopNetworkLayer"
 
 **.hasIpv4 = false
 **.hasIpv6 = false
 **.hasGn = true
 
 [Config Flooding]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = "flooding"
 
@@ -42,11 +42,11 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.np.typename = "Flooding" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer"
+**.generic.np.typename = "Flooding"
 
 [Config ProbabilisticBroadcast]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = "probabilistic"
 
@@ -54,11 +54,11 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.np.typename = "ProbabilisticBroadcast" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer"
+**.generic.np.typename = "ProbabilisticBroadcast"
 
 [Config AdaptiveProbabilisticBroadcast]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = "probabilistic"
 
@@ -66,11 +66,11 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.generic.typename = "SimpleNetworkLayer" #TODO autoconverted
-**.generic.np.typename = "AdaptiveProbabilisticBroadcast" #TODO autoconverted
+**.generic.typename = "SimpleNetworkLayer"
+**.generic.np.typename = "AdaptiveProbabilisticBroadcast"
 
 [Config WiseRoute]
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 
 *.area11.lan1.host1.app[*].networkProtocol = "wiseroute"
 
@@ -78,6 +78,6 @@ network = Hierarchical99
 **.hasIpv6 = false
 **.hasGn = true
 
-**.generic.typename = "WiseRouteNetworkLayer" #TODO autoconverted
+**.generic.typename = "WiseRouteNetworkLayer"
 **.np.sinkAddress = "router1"
 
