--- a/examples/inet/hierarchical99/omnetpp.ini
+++ b/examples/inet/hierarchical99/omnetpp.ini
@@ -3,7 +3,7 @@ network = Hierarchical99
 #record-eventlog = true
 
 **.networkConfiguratorModule = "networkConfigurator"
-**.networkConfigurator.typename = "Ipv4NetworkConfigurator" #TODO autoconverted
+**.networkConfigurator.typename = "Ipv4NetworkConfigurator"
 **.networkConfigurator.config = xmldoc("hierarchical99.xml")
 
 # ping app (all hosts ping all interface addresses in the network)
