--- a/examples/inet/igmp/omnetpp.ini
+++ b/examples/inet/igmp/omnetpp.ini
@@ -8,7 +8,7 @@ network = inet.examples.inet.igmp.Network
 **.FITgate2.ipv4.igmp.queryInterval = 60s
 
 [Config IGMPv2]
-**.igmp.typename = "Igmpv2" #TODO autoconverted
+**.igmp.typename = "Igmpv2"
 
 [Config IGMPv3]
-**.igmp.typename = "Igmpv3" #TODO autoconverted
+**.igmp.typename = "Igmpv3"
