--- a/examples/inet/nclients/omnetpp.ini
+++ b/examples/inet/nclients/omnetpp.ini
@@ -9,30 +9,30 @@
 [Config inet__inet]
 description = "inet_TCP <---> inet_TCP"
 # setting TCP stack implementation
-**.srv*.tcp.typename = "Tcp" #TODO autoconverted
-**.cli*.tcp.typename = "Tcp" #TODO autoconverted
+**.srv*.tcp.typename = "Tcp"
+**.cli*.tcp.typename = "Tcp"
 #**.srv.numPcapRecorders = 1
 #**.srv.pcapRecorder[0].pcapFile = "results/inet_srv.pcap"
 
 [Config lwip__lwip]
 description = "TcpLwip <---> TcpLwip"
 # setting TCP stack implementation
-**.srv*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.cli*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.srv*.tcp.typename = "TcpLwip"
+**.cli*.tcp.typename = "TcpLwip"
 #**.srv.numPcapRecorders = 1
 #**.srv.pcapRecorder[0].pcapFile = "results/lwip_srv.pcap"
 
 [Config lwip__inet]
 description = "TcpLwip <---> inet_TCP"
 # setting TCP stack implementation
-**.srv*.tcp.typename = "TcpLwip" #TODO autoconverted
-**.cli*.tcp.typename = "Tcp" #TODO autoconverted
+**.srv*.tcp.typename = "TcpLwip"
+**.cli*.tcp.typename = "Tcp"
 
 [Config inet__lwip]
 description = "inet_TCP <---> TcpLwip"
 # setting TCP stack implementation
-**.srv*.tcp.typename = "Tcp" #TODO autoconverted
-**.cli*.tcp.typename = "TcpLwip" #TODO autoconverted
+**.srv*.tcp.typename = "Tcp"
+**.cli*.tcp.typename = "TcpLwip"
 
 [General]
 network = NClients
