--- a/examples/manetrouting/dsdv/omnetpp.ini
+++ b/examples/manetrouting/dsdv/omnetpp.ini
@@ -12,8 +12,8 @@ num-rngs = 3
 tkenv-plugin-path = ../../../etc/plugins
 
 # mobility
-#**.host[*].mobility.typename = "MassMobility" #TODO autoconverted
-**.host[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+#**.host[*].mobility.typename = "MassMobility"
+**.host[*].mobility.typename = "StationaryMobility"
 **.mobility.constraintAreaMinZ = 0m
 **.mobility.constraintAreaMaxZ = 0m
 **.mobility.constraintAreaMinX = 0m
@@ -51,7 +51,7 @@ description = multiple network protocols
 **.host[*].hasIpv4 = true
 **.host[*].hasIpv6 = true
 **.host[*].hasGn = true
-**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer"
 
 [Config MultiIPv4]
 description = using Ipv4 on multiple network protocols
