--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -12,8 +12,8 @@ num-rngs = 3
 tkenv-plugin-path = ../../../etc/plugins
 
 # mobility
-#**.host[*].mobility.typename = "MassMobility" #TODO autoconverted
-**.host[*].mobility.typename = "StationaryMobility" #TODO autoconverted
+#**.host[*].mobility.typename = "MassMobility"
+**.host[*].mobility.typename = "StationaryMobility"
 **.mobility.constraintAreaMinZ = 0m
 **.mobility.constraintAreaMaxZ = 0m
 **.mobility.constraintAreaMinX = 0m
@@ -63,7 +63,7 @@ extends=_IPv6
 [Config _Generic]
 description = base for generic
 **.host[*].hasGn = true
-**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer"
 **.dymo.routingTableModule = "^.generic.routingTable"
 **.dymo.networkProtocolModule = "^.generic.nextHop"
 *.host[0].app[0].destAddr = "host[1](modulepath)"
@@ -79,7 +79,7 @@ description = multiple network protocols
 **.host[*].hasIpv4 = true
 **.host[*].hasIpv6 = true
 **.host[*].hasGn = true
-**.host[*].generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.host[*].generic.typename = "NextHopNetworkLayer"
 
 [Config MultiIPv4]
 description = using Ipv4 on multiple network protocols
