--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -74,7 +74,7 @@ tkenv-plugin-path = ../../etc/plugins
 **.mobility.constraintAreaMinZ = 0m
 **.mobility.constraintAreaMaxZ = 0m
 
-**.MN[0].mobility.typename = "RectangleMobility" #TODO autoconverted
+**.MN[0].mobility.typename = "RectangleMobility"
 **.MN[0].mobility.constraintAreaMinX = 180m
 **.MN[0].mobility.constraintAreaMinY = 100m
 **.MN[0].mobility.constraintAreaMaxX = 530m
@@ -83,7 +83,7 @@ tkenv-plugin-path = ../../etc/plugins
 **.MN[0].mobility.speed = 3mps
 #**.MN[0].mobility.updateInterval = 0.1s
 
-**.MN[1].mobility.typename = "RectangleMobility" #TODO autoconverted
+**.MN[1].mobility.typename = "RectangleMobility"
 **.MN[1].mobility.constraintAreaMinX = 170m
 **.MN[1].mobility.constraintAreaMinY = 100m
 **.MN[1].mobility.constraintAreaMaxX = 530m
@@ -92,7 +92,7 @@ tkenv-plugin-path = ../../etc/plugins
 **.MN[1].mobility.speed = 3mps
 #**.MN[1].mobility.updateInterval = 0.1s
 
-**.MN*.mobility.typename = "BonnMotionMobility" #TODO autoconverted
+**.MN*.mobility.typename = "BonnMotionMobility"
 **.MN*.mobility.traceFile = "zarrar.movement" # "linearMotion_2AR_oneWay";"linearMotion_2AR_oneWay" ;"testMove" #"zarrar.movement"
 **.MN*.mobility.updateInterval = 0.1s
 **.MN*.mobility.nodeId = -1
@@ -201,7 +201,7 @@ tkenv-plugin-path = ../../etc/plugins
 **.radio.transmitter.power = 2.0mW
 
 # relay unit configuration
-**.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.relayUnit.typename = "MacRelayUnit"
 **.relayUnit.addressTableSize = 100
 **.relayUnit.agingTime = 120s
 **.relayUnit.bufferSize = 1MiB
