--- a/examples/neighborcache/omnetpp.ini
+++ b/examples/neighborcache/omnetpp.ini
@@ -10,7 +10,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].typename = "AckingWirelessInterface"
 **.wlan[*].bitrate = 2Mbps
 **.wlan[*].mac.headerLength = 20B
-**.wlan[*].radio.typename = "UnitDiskRadio" #TODO autoconverted
+**.wlan[*].radio.typename = "UnitDiskRadio"
 **.wlan[*].radio.transmitter.headerLength = 96b
 **.wlan[*].radio.transmitter.communicationRange = 250m
 **.wlan[*].radio.transmitter.interferenceRange = 0m
@@ -19,10 +19,10 @@ tkenv-plugin-path = ../../../etc/plugins
 *.numHosts = 20
 
 # mobility
-**.host[0..1].mobility.typename = "StationaryMobility" #TODO autoconverted
+**.host[0..1].mobility.typename = "StationaryMobility"
 **.host[1].mobility.initialX = 600m
 **.host[1].mobility.initialY = 600m
-**.host[2..20].mobility.typename = "LinearMobility" #TODO autoconverted
+**.host[2..20].mobility.typename = "LinearMobility"
 **.host[2..20].mobility.speed = 8mps
 **.mobility.constraintAreaMinZ = 0m
 **.mobility.constraintAreaMaxZ = 0m
@@ -54,18 +54,18 @@ tkenv-plugin-path = ../../../etc/plugins
 **.radioMedium.rangeFilter = "communicationRange"
 
 [Config WithoutNeighborCache]
-**.radioMedium.neighborCache.typename = ""#TODO autoconverted
+**.radioMedium.neighborCache.typename = ""
 
 [Config QuadTreeNeighborCache]
-**.radioMedium.neighborCache.typename = "QuadTreeNeighborCache" #TODO autoconverted
+**.radioMedium.neighborCache.typename = "QuadTreeNeighborCache"
 **.radioMedium.neighborCache.maxNumOfPointsPerQuadrant = 2
 
 [Config NeighborListNeighborCache]
-**.radioMedium.neighborCache.typename = "NeighborListNeighborCache" #TODO autoconverted
+**.radioMedium.neighborCache.typename = "NeighborListNeighborCache"
 **.radioMedium.neighborCache.range = 250m
 
 [Config GridNeighborCache]
-**.radioMedium.neighborCache.typename = "GridNeighborCache" #TODO autoconverted
+**.radioMedium.neighborCache.typename = "GridNeighborCache"
 **.radioMedium.neighborCache.cellSizeX = 100m
 **.radioMedium.neighborCache.cellSizeY = 100m
 **.radioMedium.neighborCache.cellSizeZ = 100m
