--- a/examples/objectcache/omnetpp.ini
+++ b/examples/objectcache/omnetpp.ini
@@ -20,7 +20,7 @@ num-rngs = 3
 **.constraintAreaMaxY = 2000m
 **.constraintAreaMaxZ = 50m
 
-**.obstacleLoss.typename = "DielectricObstacleLoss" #TODO autoconverted
+**.obstacleLoss.typename = "DielectricObstacleLoss"
 **.spaceMinX = 0m
 **.spaceMinY = 0m
 **.spaceMinZ = 0m
@@ -32,7 +32,7 @@ num-rngs = 3
 **.config = xmldoc("obstacles.xml")
 
 # mobility
-**.host*.mobility.typename = "MassMobility" #TODO autoconverted
+**.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
 **.host*.mobility.changeAngleBy = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
@@ -70,13 +70,13 @@ description = "Without any object cache"
 
 [Config GridObjectCache]
 description = "Using a GridObjectCache"
-**.physicalEnvironment.objectCache.typename = "GridObjectCache" #TODO autoconverted
+**.physicalEnvironment.objectCache.typename = "GridObjectCache"
 **.objectCache.cellSizeX = 10m
 **.objectCache.cellSizeY = 10m
 **.objectCache.cellSizeZ = 10m
 
 [Config BvhObjectCache]
 description = "Using a BvhObjectCache"
-**.physicalEnvironment.objectCache.typename = "BvhObjectCache" #TODO autoconverted
+**.physicalEnvironment.objectCache.typename = "BvhObjectCache"
 **.objectCache.leafCapacity = 4
 **.objectCache.axisOrder = "XY"
