--- a/examples/ospfv2/dynamictest/omnetpp.ini
+++ b/examples/ospfv2/dynamictest/omnetpp.ini
@@ -13,7 +13,7 @@ sim-time-limit = 600s
 **.ospf.retransmissionInterval = 5s
 **.ospf.interfaceTransmissionDelay = 1s
 **.ospf.routerDeadInterval = 40s
-**.ospf.authentication.typename = "NullType" #TODO autoconverted
+**.ospf.authentication.typename = "NullType"
 **.ospf.authenticationKey = "0x00"
 
 **.H*.numApps = 2
