--- a/examples/pim/iptv/omnetpp.ini
+++ b/examples/pim/iptv/omnetpp.ini
@@ -11,7 +11,7 @@ network = inet.examples.pim.iptv.Network
 **.ospf.retransmissionInterval = 5s
 **.ospf.interfaceTransmissionDelay = 1s
 **.ospf.routerDeadInterval = 40s
-**.ospf.authentication.typename = "NullType" #TODO autoconverted
+**.ospf.authentication.typename = "NullType"
 **.ospf.authenticationKey = "0x00"
 
 # Apps
