--- a/examples/rip/simpletest/omnetpp.ini
+++ b/examples/rip/simpletest/omnetpp.ini
@@ -40,4 +40,4 @@ description = network layer for multiple network protocols
 **.hasIpv4 = true
 **.hasIpv6 = true
 **.hasGn = true
-**.generic.typename = "NextHopNetworkLayer" #TODO autoconverted
+**.generic.typename = "NextHopNetworkLayer"
