--- a/examples/rtp/unicast/omnetpp.ini
+++ b/examples/rtp/unicast/omnetpp.ini
@@ -23,7 +23,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.autoOutputFileNames = true
 **.outputFileName = "results/moving.mpg.sim"
 
-**.payloadType = 32 #TODO autoconverted
+**.payloadType = 32
 
 **.sender.**.commonName = "???"
 **.receiver.**.commonName = "???"
