--- a/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
@@ -61,7 +61,7 @@ cmdenv-express-mode = true
 **.host1.app[0].tClose = 100s
 
 **.host2.numApps = 1
-#**.host2.tcpApp.typename="TcpSinkApp" #TODO autoconverted
+#**.host2.tcpApp.typename="TcpSinkApp"
 **.host2.app[0].typename = "TcpEchoApp"
 **.host2.app[0].localPort = 1000
 **.host2.app[0].echoFactor = 2.0
@@ -105,7 +105,7 @@ cmdenv-express-mode = true
 **.namid = -1  # auto
 
 # Ethernet switch
-**.switch*.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.switch*.relayUnit.typename = "MacRelayUnit"
 **.relayUnit.addressTableSize = 100
 **.relayUnit.agingTime = 120s
 **.relayUnit.bufferSize = 1048576B  # 1Mb
