--- a/examples/wireless/corruptionmode/omnetpp.ini
+++ b/examples/wireless/corruptionmode/omnetpp.ini
@@ -14,7 +14,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # mobility
-*.*Host.mobility.typename = "StationaryMobility" #TODO autoconverted
+*.*Host.mobility.typename = "StationaryMobility"
 *.*Host.mobility.initFromDisplayString = false
 *.*Host.mobility.initialY = 500m
 *.*Host.mobility.initialZ = 0m
@@ -33,10 +33,10 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # radio
 *.*Host.wlan[0].typename = "WirelessInterface"
-*.*Host.wlan[0].mac.typename = "CsmaCaMac" #TODO autoconverted
+*.*Host.wlan[0].mac.typename = "CsmaCaMac"
 *.*Host.wlan[0].mac.bitrate = 100Mbps
 *.*Host.wlan[0].mac.retryLimit = 0
-*.*Host.wlan[0].radio.typename = "ApskScalarRadio" #TODO autoconverted
+*.*Host.wlan[0].radio.typename = "ApskScalarRadio"
 *.*Host.wlan[0].radio.carrierFrequency = 2GHz
 *.*Host.wlan[0].radio.bandwidth = 20MHz
 *.*Host.wlan[0].radio.transmitter.power = 1mW
