--- a/examples/wireless/dynamic/omnetpp.ini
+++ b/examples/wireless/dynamic/omnetpp.ini
@@ -15,7 +15,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # mobility
-*.*Node.mobility.typename = "StationaryMobility" #TODO autoconverted
+*.*Node.mobility.typename = "StationaryMobility"
 **.mobility.initFromDisplayString = false
 
 # ping app (host[0] pinged by others)
