--- a/examples/wireless/errorrate/omnetpp.ini
+++ b/examples/wireless/errorrate/omnetpp.ini
@@ -11,7 +11,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # mobility
-*.*Host.mobility.typename = "StationaryMobility" #TODO autoconverted
+*.*Host.mobility.typename = "StationaryMobility"
 **.mobility.initFromDisplayString = false
 **.mobility.initialY = 500m
 **.mobility.initialZ = 0m
