--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -26,7 +26,7 @@ tkenv-plugin-path = ../../../etc/plugins
 
 # mobility
 **.mobility.initFromDisplayString = true
-**.host*.mobility.typename = "LinearMobility" #TODO autoconverted
+**.host*.mobility.typename = "LinearMobility"
 **.host*.mobility.speed = 10mps
 **.host*.mobility.angle = 0deg
 **.host*.mobility.acceleration = 0
