--- a/examples/wireless/lan80211/omnetpp-ftp.ini
+++ b/examples/wireless/lan80211/omnetpp-ftp.ini
@@ -17,7 +17,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mgmt.frameCapacity = 10
 
 # mobility
-**.host*.mobility.typename = "MassMobility" #TODO autoconverted
+**.host*.mobility.typename = "MassMobility"
 **.host*.mobility.changeInterval = truncnormal(2s, 0.5s)
 **.host*.mobility.changeAngleBy = normal(0deg, 30deg)
 **.host*.mobility.speed = truncnormal(20mps, 8mps)
@@ -64,7 +64,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.wlan[*].radio.receiver.snirThreshold = 4dB
 
 # relay unit configuration
-**.relayUnit.typename = "MacRelayUnit" #TODO autoconverted
+**.relayUnit.typename = "MacRelayUnit"
 **.relayUnit.addressTableSize = 100
 **.relayUnit.agingTime = 120s
 **.relayUnit.bufferSize = 1MiB
