--- a/examples/wireless/power/omnetpp.ini
+++ b/examples/wireless/power/omnetpp.ini
@@ -11,14 +11,14 @@ sim-time-limit = 100s
 **.displayEnergyStorages = true
 
 # power
-**.energyStorage.typename = "SimpleEpEnergyStorage" #TODO autoconverted
-**.energyConsumer.typename = "StateBasedEpEnergyConsumer" #TODO autoconverted
-**.energyManagement.typename = "SimpleEpEnergyManagement" #TODO autoconverted
+**.energyStorage.typename = "SimpleEpEnergyStorage"
+**.energyConsumer.typename = "StateBasedEpEnergyConsumer"
+**.energyManagement.typename = "SimpleEpEnergyManagement"
 **.energyStorage.nominalCapacity = 0.05J
 **.energyManagement.nodeShutdownCapacity = 0J
 **.energyManagement.nodeStartCapacity = 0.025J
 *.host[*].energyStorage.initialCapacity = uniform(0J, this.nominalCapacity)
-*.host[*].energyGenerator.typename = "AlternatingEpEnergyGenerator" #TODO autoconverted
+*.host[*].energyGenerator.typename = "AlternatingEpEnergyGenerator"
 *.host[*].energyGenerator.energySinkModule = "^.energyStorage"
 *.host[*].energyGenerator.powerGeneration = 1mW
 *.host[*].energyGenerator.sleepInterval = exponential(10s)
@@ -33,7 +33,7 @@ sim-time-limit = 100s
 **.mobility.constraintAreaMaxZ = 0m
 **.mobility.initFromDisplayString = false
 **.mobility.initialZ = 0m
-*.host*.mobility.typename = "StationaryMobility" #TODO autoconverted
+*.host*.mobility.typename = "StationaryMobility"
 
 # ping app
 *.host[0].numApps = 1
