--- a/examples/wireless/ratecontrol/omnetpp.ini
+++ b/examples/wireless/ratecontrol/omnetpp.ini
@@ -15,7 +15,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxY = 400m
 **.constraintAreaMaxZ = 50m
 
-**.obstacleLoss.typename = "DielectricObstacleLoss" #TODO autoconverted
+**.obstacleLoss.typename = "DielectricObstacleLoss"
 **.spaceMinX = 0m
 **.spaceMinY = 0m
 **.spaceMinZ = 0m
@@ -44,7 +44,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cli.destAddress = "20:00:00:00:00:00"
 **.cli.sendInterval = 100ms
 
-**.mac.rateControlModule.typename = "AarfRateControl" #TODO autoconverted
+**.mac.rateControlModule.typename = "AarfRateControl"
 
 # Mobility
 **.cliHost[*].mobility.startPos = 0
@@ -54,5 +54,5 @@ tkenv-plugin-path = ../../../etc/plugins
 **.sinkClient.mobility.speed = 5mps
 
 [Config Mac]
-**.wlan.mac.typename = "Ieee80211Mac" #TODO autoconverted
+**.wlan.mac.typename = "Ieee80211Mac"
 
