Correcting the server "typename" pf TCP and DASH simulations.

--- a/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
+++ b/examples/wireless/video/videoStreaming/simulations/omnetpp.ini
@@ -85,7 +85,7 @@ extends = Base-simulation
 
 # Server
 *.hostA.numApps = 1
-*.hostA.app[0].typename = "TcpVideoStreamServerApp"
+*.hostA.app[0].typename = "TcpGenericServerApp"
 *.hostA.app[0].localPort = 5001
 
 # Host 
@@ -116,7 +116,7 @@ extends = Base-simulation
 
 # Server
 *.hostA.numApps = 1
-*.hostA.app[0].typename = "TcpVideoStreamServerApp"
+*.hostA.app[0].typename = "TcpGenericServerApp"
 *.hostA.app[0].localPort = 5001
 
 # Host
