Mobility: Dropped obsolete visualizeMobility, renamed visualRepresentation parameter to subjectModule.

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -344,7 +344,7 @@ description = "superpositioning"
 
 # other hosts are intiallly positioned in static concentric circles
 **.host[*].mobility.element[0].typename = "StaticConcentricMobility"
-**.host[*].mobility.element[0].visualRepresentation = "^.^"
+**.host[*].mobility.element[0].subjectModule = "^.^"
 **.host[*].mobility.element[0].numHosts = 7
 
 # other hosts are also moving around in a larger circle following host[0]
